--- a/.github/workflows/nightly-build-publish.yml
+++ b/.github/workflows/nightly-build-publish.yml
@@ -59,10 +59,10 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build and push base images
-        run: ./arbitrary-users-patch/build_images.sh --push
+        run: ./arbitrary-users-patch/build_images.sh --push --rm
 
       - name: Build and push happy path image
-        run: ./arbitrary-users-patch/happy-path/build_happy_path_image.sh --push
+        run: ./arbitrary-users-patch/happy-path/build_happy_path_image.sh --push --rm
       -
         name: "Build and push"
         uses: docker/build-push-action@v2
