Use ubuntu-20.04 instead of latest

--- a/.github/workflows/nightly-build-publish.yml
+++ b/.github/workflows/nightly-build-publish.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   nightly-build-publish:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - 
         name: Clone source code
