Add registryUrl to all devfiles
* Add registryUrl fields to all plugin definitions
* Modify the release script to update the registryUrl fields upon
  releasing a new version of the devfile registry

Fixes eclipse/che#19269

Signed-off-by: Eric Williams <ericwill@redhat.com>

--- a/devfile.yaml
+++ b/devfile.yaml
@@ -32,15 +32,15 @@ components:
 
   - id: eamodio/gitlens/latest
     type: chePlugin
-    registryUrl: 'https://che-plugin-registry-main.surge.sh/v3'
+    registryUrl: "https://eclipse-che.github.io/che-plugin-registry/7.29.0/v3/"
 
   - id: donjayamanne/githistory/latest
     type: chePlugin
-    registryUrl: 'https://che-plugin-registry-main.surge.sh/v3'
+    registryUrl: 'https://eclipse-che.github.io/che-plugin-registry/7.29.0/v3/'
 
   - id: timonwong/shellcheck/latest
     type: chePlugin
-    registryUrl: 'https://che-plugin-registry-main.surge.sh/v3'
+    registryUrl: 'https://eclipse-che.github.io/che-plugin-registry/7.29.0/v3/'
 
   - id: ms-vscode/vscode-github-pullrequest/latest
     type: chePlugin
