--- a/devfiles/cpp/devfile.yaml
+++ b/devfiles/cpp/devfile.yaml
@@ -10,6 +10,7 @@ projects:
       location: 'https://github.com/che-samples/cpp-hello-world'
 components:
   - type: chePlugin
+    registryUrl: "https://eclipse-che.github.io/che-plugin-registry/7.29.0/v3/"
     id: eclipse-cdt/cdt-vscode/latest
     alias: cpp-plugin
   - type: dockerimage
