--- a/devfiles/dotnet-asp.net/devfile.yaml
+++ b/devfiles/dotnet-asp.net/devfile.yaml
@@ -11,9 +11,11 @@ projects:
 components:
   -
     type: chePlugin
+    registryUrl: "https://eclipse-che.github.io/che-plugin-registry/7.29.0/v3/"
     id: redhat-developer/che-omnisharp-plugin/latest
   -
     type: chePlugin
+    registryUrl: "https://eclipse-che.github.io/che-plugin-registry/7.29.0/v3/"
     id: redhat-developer/netcoredbg-theia-plugin/latest
   -
     type: dockerimage
