--- a/devfiles/java-mongo/devfile.yaml
+++ b/devfiles/java-mongo/devfile.yaml
@@ -11,6 +11,7 @@ projects:
 components:
 -
   type: chePlugin
+  registryUrl: "https://eclipse-che.github.io/che-plugin-registry/7.29.0/v3/"
   id: redhat/java8/latest
 -
   type: dockerimage
