--- a/devfiles/lombok/devfile.yaml
+++ b/devfiles/lombok/devfile.yaml
@@ -14,6 +14,7 @@ projects:
 components:
 
   - type: chePlugin
+    registryUrl: "https://eclipse-che.github.io/che-plugin-registry/7.29.0/v3/"
     id: redhat/java/latest
     preferences:
       java.server.launchMode: Standard
