--- a/devfiles/apache-camel-k/devfile.yaml
+++ b/devfiles/apache-camel-k/devfile.yaml
@@ -12,11 +12,14 @@ projects:
 components:
   -
     type: chePlugin
+    registryUrl: "https://eclipse-che.github.io/che-plugin-registry/7.29.0/v3/"
     id: redhat/vscode-xml/latest
   -
     type: chePlugin
+    registryUrl: "https://eclipse-che.github.io/che-plugin-registry/7.29.0/v3/"
     id: redhat/vscode-apache-camel/latest
   -
-    alias: vscode-camelk
     type: chePlugin
+    registryUrl: "https://eclipse-che.github.io/che-plugin-registry/7.29.0/v3/"
     id: redhat/vscode-camelk/latest
+    alias: vscode-camelk
