--- a/devfiles/php-web-simple/devfile.yaml
+++ b/devfiles/php-web-simple/devfile.yaml
@@ -11,9 +11,11 @@ projects:
 components:
 -
   type: chePlugin
+  registryUrl: "https://eclipse-che.github.io/che-plugin-registry/7.29.0/v3/"
   id: bmewburn/vscode-intelephense-client/latest
 -
   type: chePlugin
+  registryUrl: "https://eclipse-che.github.io/che-plugin-registry/7.29.0/v3/"
   id: felixfbecker/php-debug/latest
 -
   type: dockerimage
