--- a/devfiles/python-django/devfile.yaml
+++ b/devfiles/python-django/devfile.yaml
@@ -10,6 +10,7 @@ projects:
 components:
   -
     type: chePlugin
+    registryUrl: "https://eclipse-che.github.io/che-plugin-registry/7.29.0/v3/"
     id: ms-python/python/latest
   -
     type: dockerimage
