--- a/devfiles/rust/devfile.yaml
+++ b/devfiles/rust/devfile.yaml
@@ -14,6 +14,7 @@ components:
     alias: rust
     image: quay.io/eclipse/che-rust-1.39:nightly
   - type: chePlugin
+    registryUrl: "https://eclipse-che.github.io/che-plugin-registry/7.29.0/v3/"
     id: rust-lang/rust/latest
 commands:
   - name: build
