--- a/devfiles/scala-sbt/devfile.yaml
+++ b/devfiles/scala-sbt/devfile.yaml
@@ -12,6 +12,7 @@ projects:
 components:
   -
     type: chePlugin
+    registryUrl: "https://eclipse-che.github.io/che-plugin-registry/7.29.0/v3/"
     id: scalameta/metals/latest
   -
     type: dockerimage
