--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,23 +22,14 @@ on:
 
 env:
   IMAGE: quay.io/eclipse/che-devfile-registry
+  TAG: ${{ github.event.inputs.version }}
 
 jobs:
-  build:
-    name: Create Che Devfile Registry Release
+  build-images:
     runs-on: ubuntu-20.04
-    strategy:
-      fail-fast: false
-      matrix:
-        arch: [amd64,arm64,ppc64le,s390x]
-    outputs:
-      amd64: ${{ steps.result.outputs.amd64 }}
-      arm64: ${{ steps.result.outputs.arm64 }}
-      ppc64le: ${{ steps.result.outputs.ppc64le }}
-      s390x: ${{ steps.result.outputs.s390x }}
     steps:
-      -
-        name: "Checkout source code"
+      - 
+        name: "Checkout  source code"
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
@@ -80,6 +71,55 @@ jobs:
           registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build and push base images
+        run: ./arbitrary-users-patch/build_images.sh --push --rm
+
+      - name: Build and push happy path image
+        run: ./arbitrary-users-patch/happy-path/build_happy_path_image.sh --push --rm
+
+      - name: Check if all the images are released
+        run: ./arbitrary-users-patch/verify_containers.sh
+
+  build-devfile-registry:
+    name: Create Che Devfile Registry Release
+    needs: build-images
+    runs-on: ubuntu-20.04
+    strategy:
+      fail-fast: false
+      matrix:
+        arch: [amd64,arm64,ppc64le,s390x]
+    outputs:
+      amd64: ${{ steps.result.outputs.amd64 }}
+      arm64: ${{ steps.result.outputs.arm64 }}
+      ppc64le: ${{ steps.result.outputs.ppc64le }}
+      s390x: ${{ steps.result.outputs.s390x }}
+    steps:
+      -
+        name: "Checkout source code"
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      -
+        name: "Set up QEMU"
+        uses: docker/setup-qemu-action@v1
+      -
+        name: "Set up Docker Buildx ${{ matrix.arch }}"
+        uses: docker/setup-buildx-action@v1
+      -
+        name: "Docker quay.io Login"
+        uses: docker/login-action@v1
+        with:
+          registry: quay.io
+          username: ${{ secrets.QUAY_USERNAME }}
+          password: ${{ secrets.QUAY_PASSWORD }}
+      - 
+        name: Login to docker.io
+        uses: docker/login-action@v1
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
       -
         name: "Build and push ${{ matrix.arch }}"
         uses: docker/build-push-action@v2
@@ -99,7 +139,7 @@ jobs:
         run: echo "::set-output name=${{ matrix.arch }}::${{ github.event.inputs.version }}-${{ matrix.arch }}"
   
   create-manifest:
-    needs: build-images
+    needs: build-devfile-registry
     runs-on: ubuntu-latest
     steps:
       -
@@ -130,15 +170,15 @@ jobs:
       -
         name: "Create and push manifest"
         run: |
-          AMD64_VERSION="${{ needs['build'].outputs.amd64 }}"
-          ARM64_VERSION="${{ needs['build'].outputs.arm64 }}"
-          PPC64LE_VERSION="${{ needs['build'].outputs.ppc64le }}"
-          S390X_VERSION="${{ needs['build'].outputs.s390x }}"
+          AMD64_VERSION="${{ needs['build-devfile-registry'].outputs.amd64 }}"
+          ARM64_VERSION="${{ needs['build-devfile-registry'].outputs.arm64 }}"
+          PPC64LE_VERSION="${{ needs['build-devfile-registry'].outputs.ppc64le }}"
+          S390X_VERSION="${{ needs['build-devfile-registry'].outputs.s390x }}"
           if [[ -z "$AMD64_VERSION" || \
                -z "$ARM64_VERSION" || \
                -z "$PPC64LE_VERSION" || \
                -z "$S390X_VERSION" ]]; then
-            echo "[!] The job 'build' fails on some of the architectures. Can't create complete manifest.";
+            echo "[!] The job 'build-devfile-registry' fails on some of the architectures. Can't create complete manifest.";
             exit 1;
           fi
           AMEND=""
@@ -186,7 +226,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - 
-        name: Build and push patched base images and happy path image
+        name: Tag release
         run: |
           git config --global user.name "Mykhailo Kuznietsov"
           git config --global user.email "mkuznets@redhat.com"
