--- a/.github/workflows/sidecar-check.yml
+++ b/.github/workflows/sidecar-check.yml
@@ -55,5 +55,7 @@ jobs:
       - 
         name: Run the digest checking script
         run: |
+          git config --global user.name "Mykhailo Kuznietsov"
+          git config --global user.email "mkuznets@redhat.com"
           export GITHUB_TOKEN=${CHE_INCUBATOR_BOT_GITHUB_TOKEN}
           ./arbitrary-users-patch/check_sidecar_images_digests.sh
