--- a/.github/workflows/sidecar-check.yml
+++ b/.github/workflows/sidecar-check.yml
@@ -57,5 +57,5 @@ jobs:
         run: |
           git config --global user.name "Mykhailo Kuznietsov"
           git config --global user.email "mkuznets@redhat.com"
-          export GITHUB_TOKEN=${CHE_BOT_GITHUB_TOKEN}
+          export GITHUB_TOKEN=${{ secrets.CHE_BOT_GITHUB_TOKEN }}
           ./arbitrary-users-patch/check_sidecar_image_digests.sh
