--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
           fetch-depth: 0
       - 
         name: Check existing tags
-        if: github.event.inputs.performRelease == true
+        if: github.event.inputs.performRelease == 'true'
         run: |
           set +e
           RECREATE_TAGS=${{ github.event.inputs.forceRecreateTags }}
@@ -83,7 +83,7 @@ jobs:
           sudo pip install yq
       - 
         name: Perform a release
-        if: github.event.inputs.performRelease == true
+        if: github.event.inputs.performRelease == 'true'
         run: |
           git config --global user.name "Mykhailo Kuznietsov"
           git config --global user.email "mkuznets@redhat.com"
@@ -92,7 +92,7 @@ jobs:
           ./make-release.sh --version ${{ github.event.inputs.version}} --trigger-release
 
       - name: Generate devfiles with registryUrls and publish to GH pages
-        if: github.event.inputs.publishDevfilesToGhPages == true
+        if: github.event.inputs.publishDevfilesToGhPages == 'true'
         env:
           GITHUB_TOKEN: ${{ secrets.CHE_BOT_GITHUB_TOKEN }}
           VERSION: ${{ github.event.inputs.version}}
