Install yq the old fashioned way
Signed-off-by: Eric Williams <ericwill@redhat.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,6 +77,11 @@ jobs:
           registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      -
+        name: Set up yq
+        run: |
+          sudo wget https://github.com/mikefarah/yq/releases/download/v4.7.0/yq_linux_amd64 -O /usr/bin/yq
+          sudo chmod +x /usr/bin/yq
       - 
         name: Perform a release
         if: github.event.inputs.performRelease == 'true'
@@ -88,13 +93,11 @@ jobs:
           ./make-release.sh --version ${{ github.event.inputs.version}} --trigger-release
 
       - name: Generate devfiles with registryUrls and publish to GH pages
-        uses: mikefarah/yq@v4.7.1
         if: github.event.inputs.publishDevfilesToGhPages == 'true'
         env:
           GITHUB_TOKEN: ${{ secrets.CHE_BOT_GITHUB_TOKEN }}
           VERSION: ${{ github.event.inputs.version}}
-        with:
-          cmd: ./.ci/generate_and_publish_registry_url_devfiles.sh
+        run: ./.ci/generate_and_publish_registry_url_devfiles.sh
 
       - name: Create failure MM message
         if: ${{ failure() }}
