--- a/devfiles/nodejs-angular/devfile.yaml
+++ b/devfiles/nodejs-angular/devfile.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: 1.0.0
 metadata:
-  generateName: angular-
+  generateName: nodejs-angular-
 projects:
   -
     name: angular-realworld-example-app
