ci: Use next tag for latest commit builds
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/deploy/kubernetes/che-devfile-registry/values.yaml
+++ b/deploy/kubernetes/che-devfile-registry/values.yaml
@@ -7,7 +7,7 @@
 # SPDX-License-Identifier: EPL-2.0
 #
 
-cheDevfileRegistryImage: quay.io/eclipse/che-devfile-registry:nightly
+cheDevfileRegistryImage: quay.io/eclipse/che-devfile-registry:next
 cheDevfileRegistryImagePullPolicy: Always
 cheDevfileRegistryMemoryLimit: 256Mi
 cheDevfileRegistryIngressSecretName: che-tls
