--- a/.github/workflows/update-latest-images.yml
+++ b/.github/workflows/update-latest-images.yml
@@ -8,6 +8,10 @@ on:
         description: 'Additional parameters to updateBaseImages.sh'
         default: ''
         required: false
+      branch:
+        description: 'Project branch'
+        default: 'master'
+        required: true
 
 jobs:
   build:
@@ -48,7 +52,6 @@ jobs:
           password: ${{ secrets.CRW_BUILD_TOKEN }}
       - name: Get latest images script
         run: |
-
           pushd /tmp >/dev/null || exit 1
           curl -sSLO https://raw.githubusercontent.com/redhat-developer/codeready-workspaces/crw-2-rhel-8/product/updateBaseImages.sh
           sudo chmod +x updateBaseImages.sh
@@ -68,4 +71,4 @@ jobs:
           git config --global user.email "mkuznets@redhat.com"
           export GITHUB_TOKEN=${CHE_BOT_GITHUB_TOKEN}
 
-          /tmp/updateBaseImages.sh -b master -maxdepth 3 -f *Dockerfile ${{ github.event.inputs.params }}
+          /tmp/updateBaseImages.sh -b ${{ github.event.inputs.params }} -maxdepth 3 -f *Dockerfile ${{ github.event.inputs.params }}
