--- a/.github/workflows/update-latest-images.yml
+++ b/.github/workflows/update-latest-images.yml
@@ -1,6 +1,4 @@
 name: Update base images
-
-
 on:
   workflow_dispatch:
     inputs:
@@ -15,27 +13,19 @@ on:
 
 jobs:
   build:
-    name: Check if images need to be updated to latest version
+    name: Check if base images in Dockerfiles can be updated to newer tags
     runs-on: ubuntu-20.04
     steps:
-      -
-        name: "Checkout source code"
+      - name: "Checkout source code"
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - 
-        name: Login to registry.redhat.io 
+      - name: Login to registry.redhat.io 
         uses: docker/login-action@v1
         with:
           registry: registry.redhat.io
           username: ${{ secrets.CRW_BUILD_USER }}
           password: ${{ secrets.CRW_BUILD_TOKEN }}
-      - name: Get latest images script
-        run: |
-          pushd /tmp >/dev/null || exit 1
-          curl -sSLO https://raw.githubusercontent.com/redhat-developer/codeready-workspaces/crw-2-rhel-8/product/updateBaseImages.sh
-          sudo chmod +x updateBaseImages.sh
-          popd >/dev/null || exit 1
       - name: Install skopeo
         run: |
           . /etc/os-release
@@ -44,11 +34,13 @@ jobs:
           sudo apt-get update
           sudo apt-get -y upgrade
           sudo apt-get -y install skopeo
-      - 
-        name: Run the digest checking script
+      - name: Get + run base image check
         run: |
+          pushd /tmp >/dev/null || exit 1
+          curl -sSLO https://raw.githubusercontent.com/redhat-developer/codeready-workspaces/crw-2-rhel-8/product/updateBaseImages.sh && \
+          chmod +x updateBaseImages.sh
+          popd >/dev/null || exit 1
           git config --global user.name "Mykhailo Kuznietsov"
           git config --global user.email "mkuznets@redhat.com"
           export GITHUB_TOKEN=${CHE_BOT_GITHUB_TOKEN}
-
           /tmp/updateBaseImages.sh -b ${{ github.event.inputs.branch }} -maxdepth 3 -f *Dockerfile ${{ github.event.inputs.params }}
