--- a/.github/workflows/next-build.yml
+++ b/.github/workflows/next-build.yml
@@ -74,4 +74,10 @@ jobs:
           file: ./build/dockerfiles/Dockerfile
           platforms: ${{ steps.package.outputs.content }}
           tags:  quay.io/eclipse/${{ steps.prep.outputs.image }}:${{ steps.prep.outputs.version }},quay.io/eclipse/${{ steps.prep.outputs.image }}:${{ steps.prep.outputs.short_sha1 }}
-          push: true 
+          push: true
+
+      - name: Generate devfiles with registryUrls and publish to GH pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.CHE_BOT_GITHUB_TOKEN }}
+          VERSION: master
+        run: ./.ci/generate_and_publish_registry_url_devfiles.sh
