fix(gh-pages): install yq in next-build job

--- a/.github/workflows/next-build.yml
+++ b/.github/workflows/next-build.yml
@@ -75,6 +75,12 @@ jobs:
           platforms: ${{ steps.package.outputs.content }}
           tags:  quay.io/eclipse/${{ steps.prep.outputs.image }}:${{ steps.prep.outputs.version }},quay.io/eclipse/${{ steps.prep.outputs.image }}:${{ steps.prep.outputs.short_sha1 }}
           push: true
+          
+      -
+        name: Set up yq
+        run: |
+          sudo wget https://github.com/mikefarah/yq/releases/download/v4.7.0/yq_linux_amd64 -O /usr/bin/yq
+          sudo chmod +x /usr/bin/yq
 
       - name: Generate devfiles with registryUrls and publish to GH pages
         env:
