chore(branches): rename instances of master to main
eclipse/che#19968

Signed-off-by: Eric Williams <ericwill@redhat.com>

--- a/.github/workflows/update-latest-images.yml
+++ b/.github/workflows/update-latest-images.yml
@@ -8,7 +8,7 @@ on:
         required: false
       branch:
         description: 'Project branch'
-        default: 'master'
+        default: 'main'
         required: true
 
 jobs:
