--- a/.github/workflows/next-build.yml
+++ b/.github/workflows/next-build.yml
@@ -12,7 +12,7 @@ name: Build/Publish
 on:
   push:
     branches: 
-      - master
+      - main
 
 jobs:
   next-build-publish:
@@ -85,5 +85,5 @@ jobs:
       - name: Generate devfiles with registryUrls and publish to GH pages
         env:
           GITHUB_TOKEN: ${{ secrets.CHE_BOT_GITHUB_TOKEN }}
-          VERSION: master
+          VERSION: main
         run: ./.ci/generate_and_publish_registry_url_devfiles.sh
