fixup! Merge remote-tracking branch 'origin/skopeo-check-version-' into debug-update-latest

--- a/.github/workflows/update-latest-images.yml
+++ b/.github/workflows/update-latest-images.yml
@@ -10,6 +10,8 @@ on:
         description: 'Project branch'
         default: 'main'
         required: true
+  schedule:
+  - cron: "0 0 * * 6"
 
 jobs:
   build:
