--- a/.github/workflows/update-latest-images.yml
+++ b/.github/workflows/update-latest-images.yml
@@ -10,6 +10,8 @@ on:
         description: 'Project branch'
         default: 'main'
         required: true
+  schedule:
+  - cron: "0 0 * * 6"
 
 jobs:
   build:
@@ -26,21 +28,30 @@ jobs:
           registry: registry.redhat.io
           username: ${{ secrets.CRW_BUILD_USER }}
           password: ${{ secrets.CRW_BUILD_TOKEN }}
-      - name: Install skopeo
+      - name: Install skopeo + yq
         run: |
-          . /etc/os-release
-          echo "deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_${VERSION_ID}/ /" | sudo tee /etc/apt/sources.list.d/devel:kubic:libcontainers:stable.list
-          curl -L https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_${VERSION_ID}/Release.key | sudo apt-key add -
-          sudo apt-get update
-          sudo apt-get -y upgrade
-          sudo apt-get -y install skopeo
+          checkVersion() {
+            if [[  "$1" = "$(echo -e "$1\n$2" | sort -V | head -n1)" ]]; then
+              # echo "[INFO] $3 version $2 >= $1, can proceed."
+              true
+            else
+              echo "[INFO] Installing $3 version >= $1 ..."
+              if [[ "$3" == "yq" ]]; then
+                pip install "$3"
+              else
+                sudo apt-get -y install "$3"
+              fi
+            fi
+          }
+          checkVersion 1.1 "$(skopeo --version | sed -e "s/skopeo version //")" skopeo
+          checkVersion 2.0 "$(yq --version | sed -e "s/yq //")" yq
       - name: Get + run base image check
         run: |
           pushd /tmp >/dev/null || exit 1
+          export GITHUB_TOKEN=${{ secrets.CHE_BOT_GITHUB_TOKEN }}
           curl -sSLO https://raw.githubusercontent.com/redhat-developer/codeready-workspaces/crw-2-rhel-8/product/updateBaseImages.sh && \
           chmod +x updateBaseImages.sh
           popd >/dev/null || exit 1
           git config --global user.name "Mykhailo Kuznietsov"
           git config --global user.email "mkuznets@redhat.com"
-          export GITHUB_TOKEN=${CHE_BOT_GITHUB_TOKEN}
           /tmp/updateBaseImages.sh -b ${{ github.event.inputs.branch }} -maxdepth 3 -f *Dockerfile ${{ github.event.inputs.params }}
