--- a/devfiles/java-mysql/devfile.yaml
+++ b/devfiles/java-mysql/devfile.yaml
@@ -8,7 +8,7 @@ projects:
     source:
       type: git
       location: "https://github.com/che-samples/java-spring-petclinic"
-      commitId: 93873665453584deb891569c02e3acc7283cf394
+      commitId: main
 components:
   -
     type: chePlugin
@@ -62,7 +62,7 @@ components:
     mountSources: true
 commands:
   -
-    name: maven build
+    name: 2. Maven build
     actions:
       -
         type: exec
@@ -70,28 +70,26 @@ commands:
         command: "mvn clean install"
         workdir: "${CHE_PROJECTS_ROOT}/web-java-spring-petclinic"
   -
-    name: run webapp
+    name: 3. Run webapp
     actions:
       -
         type: exec
         component: tools
         command: |
-          SPRING_DATASOURCE_URL=jdbc:mysql://db/petclinic \
-          SPRING_DATASOURCE_USERNAME=petclinic \
-          SPRING_DATASOURCE_PASSWORD=petclinic \
-          java -jar -Dspring.profiles.active=mysql \
+          java -jar -Dspring-boot.run.profiles=mysql \
           -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 \
           target/*.jar
         workdir: ${CHE_PROJECTS_ROOT}/web-java-spring-petclinic
   -
-    name: prepare database
+    name: 1. Prepare database
     actions:
     -
       type: exec
       component: mysql
       command: |
-        /opt/rh/rh-mysql57/root/usr/bin/mysql -u root < ${CHE_PROJECTS_ROOT}/web-java-spring-petclinic/src/main/resources/db/mysql/user.sql &&
-        /opt/rh/rh-mysql57/root/usr/bin/mysql -u root petclinic < ${CHE_PROJECTS_ROOT}/web-java-spring-petclinic/src/main/resources/db/mysql/schema.sql &&
+        /opt/rh/rh-mysql57/root/usr/bin/mysql -u root < ${CHE_PROJECTS_ROOT}/web-java-spring-petclinic/src/main/resources/db/mysql/user.sql && \
+        /opt/rh/rh-mysql57/root/usr/bin/mysql -u root petclinic < ${CHE_PROJECTS_ROOT}/web-java-spring-petclinic/src/main/resources/db/mysql/schema.sql && \
+        /opt/rh/rh-mysql57/root/usr/bin/mysql -u root petclinic < ${CHE_PROJECTS_ROOT}/web-java-spring-petclinic/src/main/resources/db/mysql/data.sql && \
         echo -e "\e[32mDone.\e[0m Database petclinic was configured!"
   - name: Debug remote java application
     actions:
