fix: use another property to set the branch name
Signed-off-by: Vitaliy Gulyy <vgulyy@redhat.com>

--- a/devfiles/java-mysql/devfile.yaml
+++ b/devfiles/java-mysql/devfile.yaml
@@ -8,7 +8,7 @@ projects:
     source:
       type: git
       location: "https://github.com/che-samples/java-spring-petclinic"
-      commitId: main
+      branch: main
 components:
   -
     type: chePlugin
