fix 20233: registryUrl was empty
Change-Id: Ic303667f0a3a0406770f9a91db92f1d8ced78b38
Signed-off-by: Florent Benoit <fbenoit@redhat.com>

--- a/7.34.0/devfiles/apache-camel-k/devfile.yaml
+++ b/7.34.0/devfiles/apache-camel-k/devfile.yaml
@@ -10,11 +10,11 @@ projects:
 components:
   - type: chePlugin
     id: redhat/vscode-xml/latest
-    registryUrl: ""
+    registryUrl: https://eclipse-che.github.io/che-plugin-registry/7.34.0/v3/
   - type: chePlugin
     id: redhat/vscode-apache-camel/latest
-    registryUrl: ""
+    registryUrl: https://eclipse-che.github.io/che-plugin-registry/7.34.0/v3/
   - alias: vscode-camelk
     type: chePlugin
     id: redhat/vscode-camelk/latest
-    registryUrl: ""
+    registryUrl: https://eclipse-che.github.io/che-plugin-registry/7.34.0/v3/
