--- a/7.34.0/devfiles/che4z/devfile.yaml
+++ b/7.34.0/devfiles/che4z/devfile.yaml
@@ -4,22 +4,22 @@ metadata:
 components:
   - type: chePlugin
     id: broadcommfd/cobol-language-support/latest
-    registryUrl: ""
+    registryUrl: https://eclipse-che.github.io/che-plugin-registry/7.34.0/v3/
   - type: chePlugin
     id: broadcommfd/ccf/latest
-    registryUrl: ""
+    registryUrl: https://eclipse-che.github.io/che-plugin-registry/7.34.0/v3/
   - type: chePlugin
     id: broadcommfd/explorer-for-endevor/latest
-    registryUrl: ""
+    registryUrl: https://eclipse-che.github.io/che-plugin-registry/7.34.0/v3/
   - type: chePlugin
     id: broadcommfd/debugger-for-mainframe/latest
-    registryUrl: ""
+    registryUrl: https://eclipse-che.github.io/che-plugin-registry/7.34.0/v3/
   - type: chePlugin
     id: broadcommfd/hlasm-language-support/latest
-    registryUrl: ""
+    registryUrl: https://eclipse-che.github.io/che-plugin-registry/7.34.0/v3/
   - type: chePlugin
     id: zowe/vscode-extension-for-zowe/latest
-    registryUrl: ""
+    registryUrl: https://eclipse-che.github.io/che-plugin-registry/7.34.0/v3/
   - alias: zowe-cli
     type: kubernetes
     mountSources: true
