--- a/7.34.0/devfiles/nodejs-react/devfile.yaml
+++ b/7.34.0/devfiles/nodejs-react/devfile.yaml
@@ -9,7 +9,7 @@ projects:
 components:
   - type: chePlugin
     id: vscode/typescript-language-features/latest
-    registryUrl: ""
+    registryUrl: https://eclipse-che.github.io/che-plugin-registry/7.34.0/v3/
   - type: dockerimage
     alias: nodejs
     # system limit for number of file watchers reached with
