--- a/7.34.0/devfiles/apache-camel-springboot/devfile.yaml
+++ b/7.34.0/devfiles/apache-camel-springboot/devfile.yaml
@@ -9,13 +9,13 @@ projects:
 components:
   - type: chePlugin
     id: redhat/vscode-xml/latest
-    registryUrl: ""
+    registryUrl: https://eclipse-che.github.io/che-plugin-registry/7.34.0/v3/
   - type: chePlugin
     id: redhat/vscode-apache-camel/latest
-    registryUrl: ""
+    registryUrl: https://eclipse-che.github.io/che-plugin-registry/7.34.0/v3/
   - type: chePlugin
     id: redhat/java8/latest
-    registryUrl: ""
+    registryUrl: https://eclipse-che.github.io/che-plugin-registry/7.34.0/v3/
   - type: dockerimage
     alias: maven
     image: quay.io/eclipse/che-java8-maven:7.34.0
