--- a/7.34.0/devfiles/java-web-spring/devfile.yaml
+++ b/7.34.0/devfiles/java-web-spring/devfile.yaml
@@ -12,7 +12,7 @@ components:
     id: redhat/java/latest
     preferences:
       java.server.launchMode: Standard
-    registryUrl: ""
+    registryUrl: https://eclipse-che.github.io/che-plugin-registry/7.34.0/v3/
   - type: dockerimage
     alias: tools
     image: quay.io/eclipse/che-java11-maven:7.34.0
