--- a/7.34.0/devfiles/python/devfile.yaml
+++ b/7.34.0/devfiles/python/devfile.yaml
@@ -9,7 +9,7 @@ projects:
 components:
   - type: chePlugin
     id: ms-python/python/latest
-    registryUrl: ""
+    registryUrl: https://eclipse-che.github.io/che-plugin-registry/7.34.0/v3/
   - type: dockerimage
     alias: python
     image: quay.io/eclipse/che-python-3.8:7.34.0
