--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,5 @@
-SetEnvIf Origin "^http(s)?://.+$" AccessControlAllowOrigin=$0
-Header set Access-Control-Allow-Origin %{AccessControlAllowOrigin}e env=AccessControlAllowOrigin
-Header set Access-Control-Allow-Credentials true env=AccessControlAllowOrigin
+Header set Access-Control-Allow-Origin "*"
 Header set Access-Control-Allow-Headers "Authorization"
-
 DirectoryIndex README.md
 
 AddType image/svg+xml svg svgz
