feat(devfile2): provide links for devfile2 in nodejs and nodejs-mongo staks
Signed-off-by: svor <vsvydenk@redhat.com>

--- a/devfiles/nodejs/meta.yaml
+++ b/devfiles/nodejs/meta.yaml
@@ -3,3 +3,5 @@ displayName: NodeJS Express Web Application
 description: Stack with NodeJS 10
 tags: ["NodeJS", "Express", "ubi8"]
 icon: /images/nodejs.svg
+links:
+  v2: https://github.com/che-samples/web-nodejs-sample/tree/devfilev2
