--- a/devfiles/nodejs-mongo/meta.yaml
+++ b/devfiles/nodejs-mongo/meta.yaml
@@ -3,3 +3,5 @@ displayName: NodeJS MongoDB Web Application
 description: Stack with NodeJS 10 and MongoDB 3.4
 tags: ["NodeJS", "Express", "MongoDB", "RealWorld", "ubi8", "Centos"]
 icon: /images/nodejs.svg
+links:
+  v2: https://github.com/che-samples/nodejs-mongodb-sample/tree/devfilev2
