chore(base images): rebuildimages when pushing to ./dockerfiles/
Signed-off-by: Vitaliy Gulyy <vgulyy@redhat.com>

--- a/.github/workflows/build-base-images-pr-check.yml
+++ b/.github/workflows/build-base-images-pr-check.yml
@@ -17,7 +17,7 @@ on:
       - 'dockerfiles/**'
 
 jobs:
-  rebuild-images-on-push:
+  rebuild-images-pr-check:
     runs-on: ubuntu-20.04
     steps:
       - name: Clone source code
